--- a/package.json
+++ b/package.json
@@ -1,50 +1,53 @@
 {
-    "name": "api- teste técnico",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1",
-      "dev": "tsnd --ignore-watch node_modules --cls --rs src/server.ts",
-      "typeorm": "typeorm-ts-node-commonjs",
-      "build": "tsc",
-      "start": "node dist/server.js"
-    },
-    "repository": {
-      "type": "git",
-      "url": "git+https://github.com/JUorlando/api-project-fullstack-juorlando"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC",
-    "bugs": {
-      "url": "https://github.com/JUorlando/api-project-fullstack-juorlando/issues"
-    },
-    "homepage": "https://github.com/JUorlando/api-project-fullstack-juorlando#readme",
+    "name": "teste técnico elevcode",
+    "version": "0.1.0",
+    "private": true,
     "dependencies": {
-      "@types/bcryptjs": "^2.4.2",
-      "@types/cors": "^2.8.13",
-      "@types/express": "^4.17.17",
-      "@types/jsonwebtoken": "^9.0.2",
-      "@types/node": "^20.2.4",
-      "@types/pg": "^8.10.1",
-      "bcryptjs": "^2.4.3",
-      "cors": "^2.8.5",
-      "dotenv": "^16.0.3",
-      "express": "^4.18.2",
-      "express-async-errors": "^3.1.1",
-      "jsonwebtoken": "^9.0.0",
-      "openapi": "^1.0.1",
-      "pg": "^8.11.0",
-      "reflect-metadata": "^0.1.13",
-      "swagger": "^0.7.5",
-      "swagger-ui-express": "^4.6.3",
-      "ts-node-dev": "^2.0.0",
-      "typeorm": "0.3.11",
-      "typescript": "^5.0.4",
-      "zod": "^3.21.4"
+      "acorn": "7.1.1",
+      "gh-pages": "^4.0.0",
+      "minimist": "1.2.3",
+      "mutationobserver-shim": "0.3.7",
+      "react": "16.14.0",
+      "react-dom": "16.14.0",
+      "react-router-dom": "5.2.0",
+      "react-scripts": "3.2.0",
+      "serialize-javascript": "3.1.0"
+    },
+    "homepage": "https://johntvale.github.io/movie-card-library-crud",
+    "scripts": {
+      "start": "react-scripts start",
+      "build": "react-scripts build",
+      "test": "react-scripts test --verbose=true",
+      "eject": "react-scripts eject",
+      "lint:styles": "npx stylelint '**/*.css'",
+      "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json . --ext .js,.jsx",
+      "predeploy": "npm run build",
+      "deploy": "gh-pages -d build"
+    },
+    "eslintConfig": {
+      "extends": "react-app"
+    },
+    "browserslist": {
+      "production": [
+        ">0.2%",
+        "not dead",
+        "not op_mini all"
+      ],
+      "development": [
+        "last 1 chrome version",
+        "last 1 firefox version",
+        "last 1 safari version"
+      ]
     },
     "devDependencies": {
-      "@types/swagger-ui-express": "^4.1.3"
+      "@testing-library/react": "11.2.2",
+      "enzyme": "3.10.0",
+      "enzyme-adapter-react-16": "1.15.1",
+      "eslint": "6.8.0",
+      "eslint-config-trybe-frontend": "1.2.0",
+      "eslint-plugin-babel": "^5.3.1",
+      "stylelint": "13.8.0",
+      "stylelint-config-standard": "20.0.0",
+      "stylelint-order": "4.1.0"
     }
   }
